# tabletop_object_detector

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
config/: my_server.yaml
database_models/: 300.814.67.dec.ply
database_models/DIPLOMA_SET/: 101.236.56-cup.ply  200.572.55.ply  Tazo_tea_box.ply  tennis_ball_can.ply
database_models/OTHER_SET/: coke_can.ply
dataset/annotation/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+60 more)
launch/: play_bag.launch  play_bag_clock.launch  start_database.launch  tabletop_complete.launch  tabletop_complete_standalone.launch  tabletop_segmentation.launch
recognitions/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+60 more)
src/: iterative_distance_fitter.cpp  model_fitter.cpp  ping_tabletop_node.cpp  tabletop_complete_node.cpp  tabletop_object_recognition.cpp  tabletop_segmentation.cpp
(+3 files in other folders)
