<?xml version="1.0"?>
<package>
  <name>tabletop_object_detector</name>
  <version>1.0.0</version>
  <description>The tabletop_object_detector_fit package</description>

  <maintainer email="xvarga00@fit.vutbr.cz">Tomi Varga</maintainer>
  <maintainer email="tomi.varga727@gmail.com">Tomi Varga</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tabletop_object_detector_FIT</url> -->

  <author email="xvarga00@fit.vutbr.cz">Tomi Varga</author>
  <author email="tomi.varga727@gmail.com">Tomi Varga</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>household_objects_database_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>household_objects_database_msgs</run_depend>


</package>